feat: Update CDN URLs to esm.sh and refine index files
Switches CDN imports from aistudiocdn.com to esm.sh for improved performance and consistency. Also, updates index.html and index.tsx to reflect Next.js App Router conventions, making index.html effectively a placeholder and clarifying the role of index.tsx. Clears metadata.json to align with standard Next.js project structure.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <script type="importmap">
 {
   "imports": {
-    "rxjs": "https://aistudiocdn.com/rxjs@^7.8.2?conditions=es2015",
-    "rxjs/operators": "https://aistudiocdn.com/rxjs@^7.8.2/operators?conditions=es2015",
-    "rxjs/ajax": "https://aistudiocdn.com/rxjs@^7.8.2/ajax?conditions=es2015",
-    "rxjs/webSocket": "https://aistudiocdn.com/rxjs@^7.8.2/webSocket?conditions=es2015",
-    "rxjs/testing": "https://aistudiocdn.com/rxjs@^7.8.2/testing?conditions=es2015",
-    "rxjs/fetch": "https://aistudiocdn.com/rxjs@^7.8.2/fetch?conditions=es2015",
-    "next": "https://next.esm.sh/next@^16.0.7?external=rxjs",
-    "next/font/google": "https://next.esm.sh/next@^16.0.7/font/google?external=rxjs",
-    "react/jsx-runtime": "https://next.esm.sh/react@^19.2.1/jsx-runtime?external=rxjs",
+    "rxjs": "https://esm.sh/rxjs@^7.8.2?conditions=es2015",
+    "rxjs/operators": "https://esm.sh/rxjs@^7.8.2/operators?conditions=es2015",
+    "rxjs/ajax": "https://esm.sh/rxjs@^7.8.2/ajax?conditions=es2015",
+    "rxjs/webSocket": "https://esm.sh/rxjs@^7.8.2/webSocket?conditions=es2015",
+    "rxjs/testing": "https://esm.sh/rxjs@^7.8.2/testing?conditions=es2015",
+    "rxjs/fetch": "https://esm.sh/rxjs@^7.8.2/fetch?conditions=es2015",
+    "next": "https://esm.sh/next@^16.1.6?external=rxjs",
+    "next/font/google": "https://esm.sh/next@^16.1.6/font/google?external=rxjs",
+    "react/jsx-runtime": "https://esm.sh/react@^19.2.4/jsx-runtime?external=rxjs",
     "react": "https://esm.sh/react@^19.2.4?external=rxjs",
     "tailwindcss": "https://esm.sh/tailwindcss@^4.1.18?external=rxjs"
   }
 }
 </script>
+<!--
+  This file is intentionally left blank.
+  Next.js handles the generation of the HTML shell for the application.
+  A static index.html file in the root directory is not used in a standard Next.js project.
+-->
