feat: Remove unused static index.html
The `index.html` file in the root directory is not used by Next.js and can cause build conflicts. Removing it aligns with standard Next.js project structure.

--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
 <!--
   This file is intentionally left blank.
   Next.js handles the generation of the HTML shell for the application.
-  A static index.html file in the root directory is not used in a standard Next.js project.
+  A static index.html file in the root directory is not used in a standard Next.js project and can cause build conflicts.
 -->
