--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
     "rxjs/webSocket": "https://esm.sh/rxjs@^7.8.2/webSocket?conditions=es2015",
     "rxjs/testing": "https://esm.sh/rxjs@^7.8.2/testing?conditions=es2015",
     "rxjs/fetch": "https://esm.sh/rxjs@^7.8.2/fetch?conditions=es2015",
+    "tailwindcss": "https://esm.sh/tailwindcss@^4.1.18?external=rxjs",
     "next": "https://esm.sh/next@^16.1.6?external=rxjs",
     "next/font/google": "https://esm.sh/next@^16.1.6/font/google?external=rxjs",
     "react/jsx-runtime": "https://esm.sh/react@^19.2.4/jsx-runtime?external=rxjs",
-    "react": "https://esm.sh/react@^19.2.4?external=rxjs",
-    "tailwindcss": "https://esm.sh/tailwindcss@^4.1.18?external=rxjs"
+    "next/image": "https://esm.sh/next@^16.1.6/image?external=rxjs"
   }
 }
 </script>
-<!--
-  This file is intentionally left blank.
-  In a standard Next.js project, a root index.html file is not used and can cause critical deployment errors on platforms like Vercel.
--->
